<resources>
    <string name="app_name">Laundry</string>
    <string name="pelanggan_id" translatable="false">id_pelanggan</string>
    <string name="Terdaftar" translatable="false">terdaftar_pelanggan</string>
    <string name="pelanggan_lihat" translatable="false">lihat_pelanggan</string>
    <string name="pelanggan_hubungi" translatable="false">hubungi_pelanggan</string>
    <string name="pegawai_id" translatable="false">id_pegawai</string>
    <string name="pegawai_cabang" translatable="false">cabang_pegawai</string>
    <string name="layanan_id" translatable="false">id_layanan</string>
    <string name="layanan_nama" translatable="false">nama_layanan :</string>
    <string name="Harga" translatable="false">Harga</string>
    <string name="layanan_nama_cabang" translatable="false">nama_cabang_layanan</string>
    <string name="pelanggan_tambah_noHP" translatable="false">tambah_pelanggan_noHP</string>
    <string name="validasi_tambah_pelanggan" translatable="false">tambah_pelanggan_validsi</string>
    <string name="BerhasilTambahPelanggan" translatable="false">pelanggan_tambah_berhasil</string>
    <string name="GagalTambahPelanggan" translatable="false">gagal_tambah_pelanggan</string>
    <string name="pelanggan_nohp" translatable="false">nohp_pelanggan</string>
    <string name="pegawai_nohp" translatable="false">nohp_pegawai</string>
    <string name="TambahPelangganBaru" translatable="false">judul_tambah_pelanggan</string>
    <string name="detail_pelanggan" translatable="false">pelanggan_detail</string>
    <string name="nama_lengkap" translatable="false">lengkap_nama</string>
    <string name="add" translatable="false">tambah</string>
    <string name="tambah_layanan_judul" translatable="false">judul_layanan_tambah</string>
    <string name="pelanggan_edit" translatable="false">edit_pelanggan</string>
    <string name="pelanggan_hapus" translatable="false">hapus_pelanggan</string>
    <string name="SelamatDatangLogin" translatable="false">SelamatDatangLogin</string>
    <string name="LoginUntukLanjut" translatable="false">LoginUntukLanjut</string>
    <string name="NamaPengguna" translatable="false">NamaPengguna</string>
    <string name="KataSandi" translatable="false">KataSandi</string>
    <string name="ValidasiUsernameLogin" translatable="false">ValidasiUsernameLogin</string>
    <string name="ValidasiPasswordLogin" translatable="false">ValidasiPasswordLogin</string>
    <string name="SelamatPagi" translatable="false">SelamatPagi</string>
    <string name="SelamatSiang" translatable="false">SelamatSiang</string>
    <string name="SelamatSore" translatable="false">SelamatSore</string>
    <string name="SelamatMalam" translatable="false">SelamatMalam</string>
    <string name="EstimasiHariIni" translatable="false">EsitimasiHariIni</string>
    <string name="Transaksi" translatable="false">Transaksi</string>
    <string name="Pelanggan" translatable="false">Pelanggan</string>
    <string name="Laporan" translatable="false">Laporan</string>
    <string name="Akun" translatable="false">Akun</string>
    <string name="Layanan" translatable="false">Layanan</string>
    <string name="Tambahan" translatable="false">Tambahan</string>
    <string name="Pegawai" translatable="false">Pegawai</string>
    <string name="Cabang" translatable="false">Cabang</string>
    <string name="Cetak" translatable="false">Cetak</string>
    <string name="KeluarApp" translatable="false">KeluarApp</string>
    <string name="ValidasiNamaPelanggan" translatable="false">ValidasiNamaPelanggan</string>
    <string name="ValidasiAlamatPelanggan" translatable="false">ValidasiAlamaPelanggan</string>
    <string name="ValidasiNoHPPelanggan" translatable="false">ValidasiNoHPPelanggan</string>
    <string name="ValidasiCabangPelanggan" translatable="false">ValidasiCabangPelanggan</string>
    <string name="Nama" translatable="false">Nama</string>
    <string name="Alamat" translatable="false">Alamat</string>
    <string name="HintNama" translatable="false">HintNama</string>
    <string name="HintAlamat" translatable="false">HintAlamat</string>
    <string name="NoHP" translatable="false">NoHP</string>
    <string name="HintNoHP" translatable="false">HintNoHP</string>
    <string name="HintCabang" translatable="false">HintCabang</string>
    <string name="DataPelanggan" translatable="false">DataPelanggan</string>
    <string name="DetailPelanggan" translatable="false">DetailPelanggan</string>
    <string name="Edit" translatable="false">Edit</string>
    <string name="Hapus" translatable="false">Hapus</string>
    <string name="EditPelanggan" translatable="false">EditPelanggan</string>
    <string name="Save" translatable="false">Save</string>
    <string name="EditBerhasil" translatable="false">EditBerhasil</string>
    <string name="EditGagal" translatable="false">EditGagal</string>
    <string name="DataPegawai" translatable="false">DataPegawai</string>
    <string name="Status" translatable="false">Status</string>
    <string name="TambahPegawaiBaru" translatable="false">TambahPegawaiBaru</string>
    <string name="HintStatus" translatable="false">HintStatus</string>
    <string name="ValidasiNamaPegawai" translatable="false">ValidasiNamaPegawai</string>
    <string name="ValidasiAlamatPegawai" translatable="false">ValidasiAlamatPegawai</string>
    <string name="ValidasiNoHPPegawai" translatable="false">ValidasiNoHPPegawai</string>
    <string name="ValidasiCabangPegawai" translatable="false">ValidasiCabangPegawai</string>
    <string name="ValidasiStatusPegawai" translatable="false">ValidasiStatusPegawai</string>
    <string name="BerhasilUpdatePelanggan" translatable="false">BerhasilUpdatePelanggan</string>
    <string name="GagalUpdatePelanggan" translatable="false">GagalUpdatePelanggan</string>
    <string name="IDTidakAda" translatable="false">IDTidakAda</string>
    <string name="Batal" translatable="false">Batal</string>
    <string name="KonfirmasiHapus" translatable="false">KonfirmasiHapus</string>
    <string name="HapusBerhasil" translatable="false">HapusBerhasil</string>
    <string name="HapusGagal" translatable="false">HapusGagal</string>
    <string name="HapusPelanggan" translatable="false">HapusPelanggan</string>
    <string name="KonfirmasiHapus1" translatable="false">KonfirmasiHapus1</string>
    <string name="Hapusgagal1" translatable="false">HapusBerhasil1</string>
    <string name="HapusPegawai" translatable="false">HapusPegawai</string>
    <string name="HapusBerhasil1" translatable="false">HapusGagal1</string>
    <string name="BerhasilTambahPegawai" translatable="false">BerhasilTambahPegawai</string>
    <string name="GagalTambahPegawai" translatable="false">GagalTambahPegawai</string>
    <string name="BerhasilUpdatePegawai" translatable="false">BerhasilUpdatePegawai</string>
    <string name="GagalUpdatePegawai" translatable="false">GagalUpdatePegawai</string>
    <string name="EditPegawai" translatable="false">EditPegawai</string>
    <string name="Editable" translatable="false">Editable</string>
    <string name="DataLayanan" translatable="false">DataLayanan</string>
    <string name="HintHarga" translatable="false">HintHarga</string>
    <string name="TambahLayananBaru" translatable="false">TambahLayananBaru</string>
    <string name="DetailPegawai" translatable="false">DetailPegawai</string>
    <string name="DetailLayanan" translatable="false">DetailLayanan</string>
    <string name="ValidasiNamaLayanan" translatable="false">ValidasiNamaLayanan</string>
    <string name="ValidasiHargaLayanan" translatable="false">ValidasiHargaLayanan</string>
    <string name="ValidasiCabangLayanan" translatable="false">ValidasiCabangLayanan</string>
    <string name="BerhasilUpdateLayanan" translatable="false">BerhasilUpdateLayanan</string>
    <string name="GagalUpdateLayanan" translatable="false">GagalUpdateLayanan</string>
    <string name="BerhasilTambahLayanan" translatable="false">BerhasilTambahLayanan</string>
    <string name="GagalTambahLayanan" translatable="false">GagalTambahLayanan</string>
    <string name="EditLayanan" translatable="false">EditLayanan</string>
    <string name="cabang_id" translatable="false">cabang_id</string>
    <string name="DataCabang" translatable="false">DataCabang</string>
    <string name="Slogan1" translatable="false">Slogan1</string>
    <string name="Slogan2" translatable="false">Slogan2</string>
    <string name="Slogan3" translatable="false">Slogan3</string>
    <string name="Komitmen" translatable="false">Komitmen</string>
    <string name="DetailCabang" translatable="false">DetailCabang</string>
    <string name="TambahCabangBaru" translatable="false">TambahCabangBaru</string>
    <string name="BerhasilUpdateCabang" translatable="false">BerhasilUpdateCabang</string>
    <string name="GagalUpdateCabang" translatable="false">GagalUpdateCabang</string>
    <string name="BerhasilTambahCabang" translatable="false">BerhasilTambahCabang</string>
    <string name="GagalTambahCabang" translatable="false">GagalTambahCabang</string>
    <string name="EditCabang" translatable="false">EditCabang</string>
    <string name="HapusCabang" translatable="false">HapusCabang</string>
    <string name="KonfirmasiHapus2" translatable="false">KonfirmasiHapus2</string>
    <string name="KonfirmasiHapus3" translatable="false">KonfirmasiHapus3</string>
    <string name="HapusBerhasil2" translatable="false">HapusBerhasil2</string>
    <string name="HapusGagal2" translatable="false">HapusGagal2</string>
    <string name="HapusGagal3" translatable="false">HapusGagal3</string>
    <string name="HapusBerhasil3" translatable="false">HapusBerhasil3</string>
    <string name="HapusLayanan" translatable="false">HapusLayanan</string>
    <string name="HapusGagal1" translatable="false">HapusGagal1</string>
    <string name="TambahTambahanLayanan" translatable="false">TambahTambahanLayanan</string>
    <string name="DataTambahan" translatable="false">DataTambahan</string>
    <string name="DetailTambahan" translatable="false">DetailTambahan</string>
    <string name="NamaTitikDua" translatable="false">NamaTitikDua</string>
    <string name="NoHPTitikDua" translatable="false">NoHPTitikDua</string>
    <string name="AlamatTitikDua" translatable="false">AlamatTitikDua</string>
    <string name="PilihPelanggan" translatable="false">PilihPelanggan</string>
    <string name="HargaTititkDua" translatable="false">HargaTititkDua</string>
    <string name="PilihLayanan" translatable="false">PilihLayanan</string>
    <string name="PilihTambahan" translatable="false">PilihTambahan</string>
    <string name="HapusTambahan" translatable="false">HapusTambahan</string>
    <string name="KonfirmasiHapus4" translatable="false">KonfirmasiHapus4</string>
    <string name="HapusBerhasil4" translatable="false">HapusBerhasil4</string>
    <string name="HapusGagal4" translatable="false">HapusGagal4</string>
    <string name="BerhasilUpdateTambahan" translatable="false">BerhasilUpdateTambahan</string>
    <string name="GagalUpdateTambahan" translatable="false">GagalUpdateTambahan</string>
    <string name="BerhasilTambahTambahan" translatable="false">BerhasilTambahTambahan</string>
    <string name="GagalTambahTambahan" translatable="false">GagalTambahTambahan</string>
    <string name="EditTambahan" translatable="false">EditTambahan</string>
    <string name="KonfirmasiData" translatable="false">KonfirmasiData</string>
    <string name="Proses" translatable="false">Proses</string>
    <string name="LayananTambahan" translatable="false">LayananTambahan</string>
    <string name="LayananUtama" translatable="false">LayananUtama</string>
    <string name="Bayar" translatable="false">Bayar</string>
    <string name="TotalBayar" translatable="false">TotalBayar</string>
    <string name="PilihPelangganDulu" translatable="false">PilihPelangganDulu</string>
    <string name="PilihLayananUtama" translatable="false">PilihLayananUtama</string>
</resources>