<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_data_pelanggan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="20dp"
    android:layout_margin="10dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/JudulCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:padding="2dp"
                android:text="@string/DataPelanggan"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvid_pelanggan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_margin="5dp"
                android:text="@string/pelanggan_id"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Nama"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvnama_pelanggan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/Nama"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Alamat"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvalamat_pelanggan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/Alamat"
                android:textSize="12sp"
                android:textAlignment="textEnd"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/NoHP"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvnohp_pelanggan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/NoHP"
            android:textSize="12sp"
            android:textAlignment="textEnd"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/Cabang"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvcabang_pelanggan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/Cabang"
            android:textSize="12sp"
            android:textAlignment="textEnd"/>
    </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_lihat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/pelanggan_lihat"
                android:textColor="@android:color/white"
                android:layout_marginHorizontal="10dp"/>

            <Button
                android:id="@+id/btn_hubungi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/pelanggan_hubungi"
                android:textColor="@android:color/white"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
