<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_mod_pegawai"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/JudulCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="20dp"
                android:paddingVertical="8dp"
                android:text="@string/DetailPegawai"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvid_pegawai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:text="@string/pegawai_id"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Nama"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvnama_pegawai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Nama"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/strip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Status"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Status"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/NoHP"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvnohp_pegawai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/NoHP"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/strip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Alamat"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvcabang_pegawai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Alamat"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Cabang"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvalamat_pegawai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Cabang"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/strip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Terdaftar"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/terdaftar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/Terdaftar"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/kuning"
                android:text="@string/Edit" />

            <Button
                android:id="@+id/btnHapus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/merah"
                android:text="@string/Hapus" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
