<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_data_pelanggan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="20dp"
    android:layout_margin="10dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tvid_pelanggan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_margin="5dp"
                android:text="@string/pelanggan_id"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvnama_pelanggan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="3dp"
            android:text="@string/Nama"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="3dp"
            android:text="@string/Alamat"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvalamat_pelanggan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="3dp"
            android:text="@string/Alamat"
            android:textSize="12sp"
            android:textAlignment="textStart"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="3dp"
                android:text="@string/pelanggan_nohp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvnohp_pelanggan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="3dp"
                android:text="@string/pelanggan_nohp"
                android:textSize="12sp"
                android:textAlignment="textStart"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
